# TR1NITY

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml
.github/: CODEOWNERS  (+2 more)
services/ai-assist/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ai-assist/app/: __init__.py  main.py
services/ai-assist/tests/: test_health.py
services/api/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
services/api/app/: __init__.py  config.py  dependencies.py  incidents.py  main.py  realtime.py  runbooks.py  store.py
services/api/app/clients/: __init__.py  correlator.py  opensearch.py
services/api/app/fp/: __init__.py  classifier.py  db.py  features.py  scorer.py  suppressions.py  train.py  whitelist.py  whitelist.yaml
services/api/app/routers/: __init__.py  attack.py  cases.py  incidents.py  realtime.py  runbooks.py  similar.py  suppressions.py
services/api/data/: .gitkeep
services/api/tests/: conftest.py  test_fp_classifier.py  test_fp_compose.py  test_fp_db.py  test_fp_train.py  test_fp_whitelist.py  test_health.py  test_incidents_layered.py  test_incidents_lib.py  test_realtime.py  test_router_attack.py  test_router_cases.py  test_router_incidents.py  test_router_runbooks.py  test_router_similar.py  test_router_suppressions.py  test_store.py
services/api/tests/fixtures/: __init__.py  incidents.py
services/correlator/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/correlator/app/: __init__.py  attack.py  config.py  grouping.py  incident.py  main.py  pipeline.py
services/correlator/app/consumer/: __init__.py  base.py  memory.py  opensearch.py
services/correlator/app/intel/: __init__.py  base.py  cache.py  file_provider.py
services/correlator/app/intel/data/: ioc.json
services/correlator/app/sigma/: __init__.py  engine.py
services/correlator/app/sigma/rules/: firewall_portscan.yml  waf_path_traversal.yml  waf_sql_injection.yml  (+1 more)
services/correlator/app/sinks/: __init__.py  base.py  opensearch.py  stdout.py
services/correlator/tests/: conftest.py  test_api.py  test_attack.py  test_consumer_opensearch.py  test_grouping.py  test_health.py  test_intel.py  test_pipeline.py  test_sigma.py  test_sinks.py
services/ingestor/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
services/ingestor/app/: __init__.py  config.py  dependencies.py  ecs.py  main.py
services/ingestor/app/routers/: __init__.py  firewall.py  health.py  waf.py  wazuh.py
services/ingestor/app/sinks/: __init__.py  base.py  opensearch.py  stdout.py
services/ingestor/app/sources/: __init__.py  firewall.py  modsec.py  wazuh.py
services/ingestor/tests/: conftest.py  test_ecs.py  test_endpoints.py  test_firewall_parser.py  test_health.py  test_modsec_parser.py  test_opensearch_sink.py  test_wazuh_parser.py
services/ingestor/tests/fixtures/: iptables_drop.txt  modsec_sqli.json  pfsense_block.txt  wazuh_brute_force.json  wazuh_malware.json
(+92 files in other folders)
