[project]
name = "tr1nity-api"
version = "0.1.0"
description = "TR1NITY api service — Phase 0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TR1NITY contributors" }]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PT", "SIM"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
